{
    "name": "AgentInputActions",
    "maps": [
        {
            "name": "AgentActionMap",
            "id": "2b41c384-afa4-4457-a9bb-85fae03fd74d",
            "actions": [
                {
                    "name": "MOVE",
                    "type": "Value",
                    "id": "f5b4143d-0b7c-4768-a354-4849ca7838eb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JUMP",
                    "type": "Button",
                    "id": "47e91d7c-742c-469b-aa10-e481552c8930",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JUMP_RELEASE",
                    "type": "Button",
                    "id": "5e4922b7-5598-4418-a673-372674b018c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "IDLE",
                    "type": "Value",
                    "id": "e35ab1da-01f3-45a6-9417-e5381be7750c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "603d3887-79d4-4787-ab04-1a23e1efbaf2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a0ce75e-82d1-4b2a-8ccd-7e77ed7c0168",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48b06371-85ac-4d26-b165-3e0e82886019",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "78d19df6-29bc-401c-ae9e-ea910f2e3579",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MOVE",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ed09d88f-3d47-45bb-959c-b0dd1301b978",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6e2bf834-3e40-42f7-8237-6120b2461f85",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8937f712-797f-4412-9d07-1287be89a7f4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "93c9027f-5416-4808-bf77-85f3b9869c2f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b3e623bd-c9b5-41b5-b529-b8fa6e79fe47",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "JUMP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ccf86e3-9f87-4f23-bb86-32dbaad54b6c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "JUMP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "590019a4-5194-4fed-8139-0bcf63eeca82",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "JUMP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "736d38c3-1c68-45f1-9cbd-98f5d9149908",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67927a84-3399-4824-8f11-51e5ba954b8c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47bac221-3e62-4674-94de-3162ad897c00",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "46980f7b-0c93-4c84-8ad6-00f743f23e38",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1e43faa1-5d4b-4269-9148-ee317f132d93",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2edb3a3f-2798-4168-9c61-c0974b60de36",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "08ed7519-b83f-4d1b-9c8a-bc6769c12fa6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "552fa8c0-9c38-479b-bd19-dbfa7195a881",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "0da06bfe-2be1-4312-a705-6b6f5c1c9ee7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4649e569-7443-45a6-a399-10e3b0540a6a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "564469c3-b0e2-4ae3-ac8f-92a58f831443",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "481edf28-3510-45d2-ad6f-c7fc8edd8f35",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bece1c42-5030-4524-88a0-302681e141bb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "IDLE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9fdd9f22-b2c5-4735-82ba-d52a7ad47d5a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "JUMP_RELEASE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffc708ec-b5f8-470b-846f-d70175ff5218",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "JUMP_RELEASE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef960b3c-bd6e-46b5-9bd4-11a396a43143",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "AgentInputScheme",
                    "action": "JUMP_RELEASE",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "AgentInputScheme",
            "bindingGroup": "AgentInputScheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}