{
    "name": "UIInputActions",
    "maps": [
        {
            "name": "UIActionMap",
            "id": "d89120b8-56bf-4c04-8b2c-75f95f0d0d32",
            "actions": [
                {
                    "name": "START",
                    "type": "Button",
                    "id": "b7d7a5a4-1cd6-469f-9132-1e9f4bd8154b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SELECT",
                    "type": "Button",
                    "id": "c705655d-f23e-4301-93b9-707ca7145ea8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3086d0d2-72b9-4ffa-b932-7b1b568df125",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "START",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6038b15-08d9-426e-9438-3e27cc96b07e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "START",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cdf22ba-6688-492f-aa6f-5426c612c5d9",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "SELECT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c0c4615-e28a-44d8-a3ec-79e9cc2c6edc",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "SELECT",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraActionMap",
            "id": "5a384abb-6977-4811-8a79-f65089f8e583",
            "actions": [
                {
                    "name": "MOVE",
                    "type": "Value",
                    "id": "405029b4-4d72-47df-9f26-2d121fcc36e1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1758782d-d281-4923-904e-d669061614d6",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "ff2eaa74-73d7-4277-98a0-ba9884ab561d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MOVE",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "53564ade-a68f-4f67-9a31-978f7bbe13cf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3121ebc9-15c6-4268-88a4-25100d243606",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "878e282a-e04a-4f9c-9401-374a4451ad8f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cc52d5fe-41fa-4e10-90fb-b948c7dca0b7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIControlScheme",
                    "action": "MOVE",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "UIControlScheme",
            "bindingGroup": "UIControlScheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}